language/move-compiler/tests/move_check/translate/attributes_before_let.move
module M {
    public fun foo() {
        #[attr]
        let a = 1;
    }
}
